--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
             class="icon"
             onclick="mygithub()"
           />
+          <img
+          src="./assets/youtube.png"
+          alt="My Youtube Channel"
+          class="icon"
+          onclick="youtube()"
+        />
         </div>
       </div>
     </section>
@@ -79,13 +85,13 @@
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
-        <div class="section__pic-container">
+        <!-- <div class="section__pic-container">
           <img
             src="./assets/about-pic.jpg"
             alt="Profile picture"
             class="about-pic"
           />
-        </div>
+        </div> -->
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
@@ -279,7 +285,8 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Web3Cave-</h2>
+            <p>A Web3 Service angency built to with a solo purpose to send the right messsage,</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -309,13 +316,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-               onclick="location.href='#'"
+               onclick="project_2_github()"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='#'"
+                onclick="project_2_web()"
               >
                 Live Demo
               </button>
@@ -333,13 +340,13 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='#'"
+                onclick="project_3_github()"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='#'"
+                onclick="project_3_web()"
               >
                 Live Demo
               </button>
@@ -366,7 +373,7 @@
           />
           <p>
             <a href="mailto:Rasheedsanni@outlook.com"
-              >Rasheedsanni@outlook.com</a
+              >Email</a
             >
           </p>
         </div>
@@ -384,6 +391,7 @@
               >LinkedIn</a
             >
           </p>
+
         </div>
       </div>
     </section>
